--- a/Cookbook/css/style.css
+++ b/Cookbook/css/style.css
@@ -16,6 +16,7 @@ font-family: 'Fredoka', sans-serif; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Fredoka", sans-serif;
 }
 
 header {
@@ -38,7 +39,7 @@ header {
   padding: 1rem 0.3rem;
   font-size: 1.5rem;
   border-radius: 60px;
-  font-family: 'Fredoka', sans-serif;
+  font-family: "Fredoka", sans-serif;
   font-weight: 600;
   color: white;
   background-color: #d2232a;
@@ -61,12 +62,12 @@ main {
 h2 {
   padding: 0;
   margin: 0.2rem 0;
-  font-family: 'Fredoka', sans-serif;
+  font-family: "Fredoka", sans-serif;
   font-size: 2rem;
 }
 
 p {
-  font-family: 'Fredoka', sans-serif;
+  font-family: "Fredoka", sans-serif;
   font-size: 1.2rem;
 }
 
@@ -116,3 +117,54 @@ p {
 /* NonVegan */
 
 /* Footer */
+
+.footer-container {
+  margin: 5rem;
+  margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-social {
+  margin-bottom: 2rem;
+  font-size: 36px;
+}
+
+.footer-link-container {
+  display: flex;
+  gap: 1rem;
+}
+
+.Footer-link {
+  a {
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+  }
+}
+
+.social-icon {
+  color: #d2232a;
+}
+
+.social-icon:hover {
+  color: hsl(224, 89%, 60%);
+}
+
+.footer-copyWrite {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  line-height: 2rem;
+  margin-top: 3rem;
+  background-color: #d2232a;
+  color: #fff;
+  width: 100vw;
+  height: 6em;
+  border-radius: 0 0 10px 10px;
+  letter-spacing: 2px;
+}
