--- a/Cookbook/css/style.css
+++ b/Cookbook/css/style.css
@@ -16,6 +16,7 @@ font-family: 'Fredoka', sans-serif; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Fredoka", sans-serif;
 }
 
 header {
