--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,82 @@ p {
 
 /* NonVegan */
 
+/* Recipe Display */
+
+.recipeDisplay {
+  display: flex;
+  flex-direction: column;
+  border: #662601 solid 10px;
+  border-radius: 1rem;
+  margin-top: 5rem;
+  background-color: #db904a;
+}
+
+.recipeHeader {
+  display: flex;
+  flex-direction: row;
+  gap: 5rem;
+  border-radius: 1rem 1rem 0 0;
+  padding: 2rem;
+}
+
+.recipeHeader img {
+  margin: 1rem 0 1rem 1rem;
+  height: auto;
+  width: 38rem;
+  border: 3px solid #662601;
+  border-radius: 1rem;
+}
+
+.recipeText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.5rem;
+  width: 40%;
+}
+
+.recipeText h3 {
+  font-size: 2.75rem;
+  padding-bottom: 0.5rem;
+  text-decoration: underline;
+}
+
+.recipeText > p {
+  font-weight: 500;
+  font-size: 1.5rem;
+  text-decoration: underline;
+}
+
+.recipeText ul {
+  list-style: none;
+}
+
+.recipeText li {
+  text-align: start;
+  font-size: 1.25rem;
+  margin: 0.5rem 0;
+}
+
+.recipeInfo p {
+  font-size: 1.25rem;
+}
+
+.recipeBody h4 {
+  margin-bottom: 2rem;
+  font-size: 2.5rem;
+}
+
+.recipeBody ol {
+  margin: 0 0 0 50px;
+}
+
+.recipeBody li {
+  text-align: left;
+  margin: 0 1rem 3rem;
+  font-size: 1.25rem;
+}
+
 /* Footer */
 
 .footer-container {
