--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ header {
 }
 
 #buttonBreakfast:hover {
-  max-height: fit-content; 
+  max-height: fit-content;
 }
 
 #buttonBreakfast:hover #buttonBreakfastContent {
@@ -61,7 +61,7 @@ header {
 }
 
 #buttonLunch:hover {
-  max-height: fit-content; 
+  max-height: fit-content;
 }
 
 #buttonLunch:hover #buttonLunchContent {
@@ -70,7 +70,7 @@ header {
 }
 
 #buttonDinner:hover {
-  max-height: fit-content; 
+  max-height: fit-content;
 }
 
 #buttonDinner:hover #buttonDinnerContent {
@@ -166,10 +166,10 @@ p {
 .recipeDisplay {
   display: flex;
   flex-direction: column;
-  border: #662601 solid 10px;
+  border: #d2232a solid 7px;
   border-radius: 1rem;
   margin-top: 5rem;
-  background-color: #db904a;
+  background-color: #ead196;
 }
 
 .recipeHeader {
@@ -184,7 +184,7 @@ p {
   margin: 0.5rem 0 0 0.5rem;
   height: auto;
   width: 38rem;
-  border: 3px solid #662601;
+  border: 3px solid #d2232a;
   border-radius: 1rem;
 }
 
@@ -241,12 +241,15 @@ p {
 /* Breakfast NoVeg */
 
 .foodDisplayBreakfast {
-  border: 1px solid whitesmoke;
+  margin-top: 5rem;
+  border: 7px solid #d2232a;
   border-radius: 25px;
   background-color: #c2988e; /* alternative suggestion #2980b9 */
 
   h2 {
-    margin: 2rem 0;
+    margin: 2rem 0 1rem 0;
+    font-size: 3rem;
+    text-decoration: underline;
   }
 }
 
@@ -306,6 +309,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border: white solid 3px;
 }
 
 #chocolate_shell_oats {
@@ -313,6 +317,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border: white solid 3px;
 }
 
 #haferschleim {
@@ -320,6 +325,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border: white solid 3px;
 }
 
 #hummus_ohne_tahini {
@@ -327,6 +333,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border: white solid 3px;
 }
 
 #knuspriges_buchweizen_granola {
@@ -334,6 +341,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border: white solid 3px;
 }
 
 #overnight_oats_mit_skyr {
@@ -341,6 +349,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border: white solid 3px;
 }
 
 /* Footer */
