--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ p {
 .recipeDisplay {
   display: flex;
   flex-direction: column;
-  border: #d2232a solid 7px;
+  border: #d2232a solid 6px;
   border-radius: 1rem;
   margin-top: 5rem;
   background-color: #ead196;
@@ -184,7 +184,7 @@ p {
   margin: 0.5rem 0 0 0.5rem;
   height: auto;
   width: 38rem;
-  border: 3px solid #d2232a;
+  border: 3px solid white;
   border-radius: 1rem;
 }
 
@@ -242,7 +242,7 @@ p {
 
 .foodDisplayBreakfast {
   margin-top: 5rem;
-  border: 7px solid #d2232a;
+  border: 6px solid #d2232a;
   border-radius: 25px;
   background-color: #c2988e; /* alternative suggestion #2980b9 */
 
@@ -250,6 +250,12 @@ p {
     margin: 2rem 0 1rem 0;
     font-size: 3rem;
     text-decoration: underline;
+  }
+
+  p {
+    font-size: 1.75rem;
+    border-bottom: 1px dotted white;
+    text-decoration: none;
   }
 }
 
@@ -355,7 +361,7 @@ p {
 /* Footer */
 
 .footer-container {
-  margin: 5rem;
+  margin-top: 5rem;
   margin-bottom: 0;
   display: flex;
   flex-direction: column;
@@ -399,7 +405,7 @@ p {
   margin-top: 3rem;
   background-color: #d2232a;
   color: #fff;
-  width: 100vw;
+  width: 100%;
   height: 6em;
   border-radius: 0 0 10px 10px;
   letter-spacing: 2px;
