--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header {
   justify-content: space-around;
   align-items: center;
   padding-bottom: 1rem;
+  border-bottom: hsl(358, 71%, 28%) solid 2px;
 }
 
 #navHeader {
@@ -95,6 +96,11 @@ header {
 
 /* Main */
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 main {
   padding: 0 10%;
   display: flex;
@@ -102,6 +108,7 @@ main {
   justify-content: center;
   align-items: center;
   text-align: center;
+  min-height: 67.5vh;
 }
 
 h2 {
@@ -177,13 +184,13 @@ p {
 .recipeHeader {
   display: flex;
   flex-direction: row;
-  gap: 5rem;
+  gap: 15rem;
   border-radius: 1rem 1rem 0 0;
   padding: 2rem;
 }
 
 .recipeHeader img {
-  margin: 0.5rem 0 0 0.5rem;
+  margin: 2rem 0 0 2rem;
   height: auto;
   width: 38rem;
   border: 3px solid white;
@@ -226,7 +233,7 @@ p {
 }
 
 .recipeBody h4 {
-  margin-bottom: 2rem;
+  margin: 2.5rem 0 2.5rem 0;
   font-size: 2.5rem;
 }
 
@@ -404,6 +411,6 @@ p {
   color: #fff;
   width: 100%;
   height: 6em;
-  border-radius: 0 0 10px 10px;
   letter-spacing: 2px;
+  border-top: hsl(358, 71%, 28%) solid 2px;
 }
